--- a/src/output.css
+++ b/src/output.css
@@ -7,6 +7,7 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --color-red-500: oklch(63.7% 0.237 25.331);
     --color-orange-400: oklch(75% 0.183 55.934);
     --color-amber-300: oklch(87.9% 0.169 91.605);
     --color-gray-300: oklch(87.2% 0.01 258.338);
@@ -18,6 +19,12 @@
     --text-base--line-height: calc(1.5 / 1);
     --text-lg: 1.125rem;
     --text-lg--line-height: calc(1.75 / 1.125);
+    --text-xl: 1.25rem;
+    --text-xl--line-height: calc(1.75 / 1.25);
+    --text-2xl: 1.5rem;
+    --text-2xl--line-height: calc(2 / 1.5);
+    --text-3xl: 1.875rem;
+    --text-3xl--line-height: calc(2.25 / 1.875);
     --text-5xl: 3rem;
     --text-5xl--line-height: 1;
     --text-6xl: 3.75rem;
@@ -25,6 +32,10 @@
     --text-7xl: 4.5rem;
     --text-7xl--line-height: 1;
     --font-weight-medium: 500;
+    --font-weight-bold: 700;
+    --tracking-wide: 0.025em;
+    --tracking-wider: 0.05em;
+    --tracking-widest: 0.1em;
     --radius-xl: 0.75rem;
     --radius-3xl: 1.5rem;
     --default-font-family: var(--font-sans);
@@ -216,6 +227,9 @@
   .hidden {
     display: none;
   }
+  .table {
+    display: table;
+  }
   .h-9 {
     height: calc(var(--spacing) * 9);
   }
@@ -225,8 +239,47 @@
   .h-38 {
     height: calc(var(--spacing) * 38);
   }
+  .max-h-50 {
+    max-height: calc(var(--spacing) * 50);
+  }
+  .max-h-70 {
+    max-height: calc(var(--spacing) * 70);
+  }
+  .max-h-80 {
+    max-height: calc(var(--spacing) * 80);
+  }
+  .max-h-90 {
+    max-height: calc(var(--spacing) * 90);
+  }
+  .max-h-100 {
+    max-height: calc(var(--spacing) * 100);
+  }
+  .max-h-200 {
+    max-height: calc(var(--spacing) * 200);
+  }
+  .max-h-900 {
+    max-height: calc(var(--spacing) * 900);
+  }
   .min-h-22 {
     min-height: calc(var(--spacing) * 22);
+  }
+  .min-h-50 {
+    min-height: calc(var(--spacing) * 50);
+  }
+  .min-h-70 {
+    min-height: calc(var(--spacing) * 70);
+  }
+  .min-h-100 {
+    min-height: calc(var(--spacing) * 100);
+  }
+  .min-h-200 {
+    min-height: calc(var(--spacing) * 200);
+  }
+  .min-h-500 {
+    min-height: calc(var(--spacing) * 500);
+  }
+  .min-h-700 {
+    min-height: calc(var(--spacing) * 700);
   }
   .w-15 {
     width: calc(var(--spacing) * 15);
@@ -240,8 +293,29 @@
   .w-full {
     width: 100%;
   }
+  .max-w-100 {
+    max-width: calc(var(--spacing) * 100);
+  }
+  .max-w-110 {
+    max-width: calc(var(--spacing) * 110);
+  }
+  .max-w-124 {
+    max-width: calc(var(--spacing) * 124);
+  }
   .max-w-200 {
     max-width: calc(var(--spacing) * 200);
+  }
+  .min-w-110 {
+    min-width: calc(var(--spacing) * 110);
+  }
+  .flex-grow {
+    flex-grow: 1;
+  }
+  .grow {
+    flex-grow: 1;
+  }
+  .border-collapse {
+    border-collapse: collapse;
   }
   .resize {
     resize: both;
@@ -255,11 +329,20 @@
   .justify-center {
     justify-content: center;
   }
+  .justify-items-center {
+    justify-items: center;
+  }
   .gap-x-10 {
     column-gap: calc(var(--spacing) * 10);
   }
   .gap-y-3 {
     row-gap: calc(var(--spacing) * 3);
+  }
+  .gap-y-10 {
+    row-gap: calc(var(--spacing) * 10);
+  }
+  .gap-y-14 {
+    row-gap: calc(var(--spacing) * 14);
   }
   .rounded-3xl {
     border-radius: var(--radius-3xl);
@@ -298,6 +381,10 @@
   .font-sans {
     font-family: var(--font-sans);
   }
+  .text-2xl {
+    font-size: var(--text-2xl);
+    line-height: var(--tw-leading, var(--text-2xl--line-height));
+  }
   .text-6xl {
     font-size: var(--text-6xl);
     line-height: var(--tw-leading, var(--text-6xl--line-height));
@@ -310,19 +397,46 @@
     font-size: var(--text-lg);
     line-height: var(--tw-leading, var(--text-lg--line-height));
   }
+  .text-xl {
+    font-size: var(--text-xl);
+    line-height: var(--tw-leading, var(--text-xl--line-height));
+  }
   .leading-18 {
     --tw-leading: calc(var(--spacing) * 18);
     line-height: calc(var(--spacing) * 18);
   }
+  .font-bold {
+    --tw-font-weight: var(--font-weight-bold);
+    font-weight: var(--font-weight-bold);
+  }
   .font-medium {
     --tw-font-weight: var(--font-weight-medium);
     font-weight: var(--font-weight-medium);
+  }
+  .tracking-wide {
+    --tw-tracking: var(--tracking-wide);
+    letter-spacing: var(--tracking-wide);
+  }
+  .tracking-wider {
+    --tw-tracking: var(--tracking-wider);
+    letter-spacing: var(--tracking-wider);
+  }
+  .tracking-widest {
+    --tw-tracking: var(--tracking-widest);
+    letter-spacing: var(--tracking-widest);
   }
   .text-gray-600 {
     color: var(--color-gray-600);
   }
   .text-white {
     color: var(--color-white);
+  }
+  .underline {
+    text-decoration-line: underline;
+  }
+  .outline {
+    outline-style: var(--tw-outline-style);
+    outline-width: 1px;
   }
   .hover\:cursor-pointer {
     &:hover {
@@ -331,9 +445,159 @@
       }
     }
   }
+  .sm\:max-h-100 {
+    @media (width >= 40rem) {
+      max-height: calc(var(--spacing) * 100);
+    }
+  }
+  .sm\:max-w-124 {
+    @media (width >= 40rem) {
+      max-width: calc(var(--spacing) * 124);
+    }
+  }
+  .sm\:text-xl {
+    @media (width >= 40rem) {
+      font-size: var(--text-xl);
+      line-height: var(--tw-leading, var(--text-xl--line-height));
+    }
+  }
+  .sm\:text-red-500 {
+    @media (width >= 40rem) {
+      color: var(--color-red-500);
+    }
+  }
+  .md\:max-h-130 {
+    @media (width >= 48rem) {
+      max-height: calc(var(--spacing) * 130);
+    }
+  }
+  .md\:max-w-124 {
+    @media (width >= 48rem) {
+      max-width: calc(var(--spacing) * 124);
+    }
+  }
+  .md\:max-w-134 {
+    @media (width >= 48rem) {
+      max-width: calc(var(--spacing) * 134);
+    }
+  }
+  .md\:max-w-144 {
+    @media (width >= 48rem) {
+      max-width: calc(var(--spacing) * 144);
+    }
+  }
+  .md\:max-w-150 {
+    @media (width >= 48rem) {
+      max-width: calc(var(--spacing) * 150);
+    }
+  }
+  .md\:max-w-170 {
+    @media (width >= 48rem) {
+      max-width: calc(var(--spacing) * 170);
+    }
+  }
+  .md\:min-w-124 {
+    @media (width >= 48rem) {
+      min-width: calc(var(--spacing) * 124);
+    }
+  }
+  .md\:text-3xl {
+    @media (width >= 48rem) {
+      font-size: var(--text-3xl);
+      line-height: var(--tw-leading, var(--text-3xl--line-height));
+    }
+  }
+  .md\:leading-8 {
+    @media (width >= 48rem) {
+      --tw-leading: calc(var(--spacing) * 8);
+      line-height: calc(var(--spacing) * 8);
+    }
+  }
+  .md\:leading-10 {
+    @media (width >= 48rem) {
+      --tw-leading: calc(var(--spacing) * 10);
+      line-height: calc(var(--spacing) * 10);
+    }
+  }
+  .md\:leading-12 {
+    @media (width >= 48rem) {
+      --tw-leading: calc(var(--spacing) * 12);
+      line-height: calc(var(--spacing) * 12);
+    }
+  }
+  .md\:text-red-500 {
+    @media (width >= 48rem) {
+      color: var(--color-red-500);
+    }
+  }
+  .lg\:ml-5 {
+    @media (width >= 64rem) {
+      margin-left: calc(var(--spacing) * 5);
+    }
+  }
+  .lg\:ml-6 {
+    @media (width >= 64rem) {
+      margin-left: calc(var(--spacing) * 6);
+    }
+  }
+  .lg\:ml-10 {
+    @media (width >= 64rem) {
+      margin-left: calc(var(--spacing) * 10);
+    }
+  }
   .lg\:flex {
     @media (width >= 64rem) {
       display: flex;
+    }
+  }
+  .lg\:max-h-100 {
+    @media (width >= 64rem) {
+      max-height: calc(var(--spacing) * 100);
+    }
+  }
+  .lg\:max-h-110 {
+    @media (width >= 64rem) {
+      max-height: calc(var(--spacing) * 110);
+    }
+  }
+  .lg\:max-h-120 {
+    @media (width >= 64rem) {
+      max-height: calc(var(--spacing) * 120);
+    }
+  }
+  .lg\:max-w-100 {
+    @media (width >= 64rem) {
+      max-width: calc(var(--spacing) * 100);
+    }
+  }
+  .lg\:max-w-110 {
+    @media (width >= 64rem) {
+      max-width: calc(var(--spacing) * 110);
+    }
+  }
+  .lg\:max-w-120 {
+    @media (width >= 64rem) {
+      max-width: calc(var(--spacing) * 120);
+    }
+  }
+  .lg\:max-w-130 {
+    @media (width >= 64rem) {
+      max-width: calc(var(--spacing) * 130);
+    }
+  }
+  .lg\:max-w-140 {
+    @media (width >= 64rem) {
+      max-width: calc(var(--spacing) * 140);
+    }
+  }
+  .lg\:max-w-230 {
+    @media (width >= 64rem) {
+      max-width: calc(var(--spacing) * 230);
+    }
+  }
+  .lg\:max-w-240 {
+    @media (width >= 64rem) {
+      max-width: calc(var(--spacing) * 240);
     }
   }
   .lg\:max-w-250 {
@@ -341,15 +605,125 @@
       max-width: calc(var(--spacing) * 250);
     }
   }
+  .lg\:max-w-260 {
+    @media (width >= 64rem) {
+      max-width: calc(var(--spacing) * 260);
+    }
+  }
+  .lg\:max-w-270 {
+    @media (width >= 64rem) {
+      max-width: calc(var(--spacing) * 270);
+    }
+  }
+  .lg\:max-w-2530 {
+    @media (width >= 64rem) {
+      max-width: calc(var(--spacing) * 2530);
+    }
+  }
+  .lg\:min-w-110 {
+    @media (width >= 64rem) {
+      min-width: calc(var(--spacing) * 110);
+    }
+  }
+  .lg\:min-w-120 {
+    @media (width >= 64rem) {
+      min-width: calc(var(--spacing) * 120);
+    }
+  }
+  .lg\:min-w-130 {
+    @media (width >= 64rem) {
+      min-width: calc(var(--spacing) * 130);
+    }
+  }
+  .lg\:min-w-140 {
+    @media (width >= 64rem) {
+      min-width: calc(var(--spacing) * 140);
+    }
+  }
+  .lg\:min-w-160 {
+    @media (width >= 64rem) {
+      min-width: calc(var(--spacing) * 160);
+    }
+  }
+  .lg\:min-w-250 {
+    @media (width >= 64rem) {
+      min-width: calc(var(--spacing) * 250);
+    }
+  }
+  .lg\:min-w-260 {
+    @media (width >= 64rem) {
+      min-width: calc(var(--spacing) * 260);
+    }
+  }
+  .lg\:grid-cols-2 {
+    @media (width >= 64rem) {
+      grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+  }
+  .lg\:gap-x-10 {
+    @media (width >= 64rem) {
+      column-gap: calc(var(--spacing) * 10);
+    }
+  }
+  .lg\:pl-5 {
+    @media (width >= 64rem) {
+      padding-left: calc(var(--spacing) * 5);
+    }
+  }
+  .lg\:text-xl {
+    @media (width >= 64rem) {
+      font-size: var(--text-xl);
+      line-height: var(--tw-leading, var(--text-xl--line-height));
+    }
+  }
+  .lg\:text-\[22px\] {
+    @media (width >= 64rem) {
+      font-size: 22px;
+    }
+  }
+  .lg\:text-\[23px\] {
+    @media (width >= 64rem) {
+      font-size: 23px;
+    }
+  }
   .lg\:text-\[74px\] {
     @media (width >= 64rem) {
       font-size: 74px;
+    }
+  }
+  .lg\:leading-8 {
+    @media (width >= 64rem) {
+      --tw-leading: calc(var(--spacing) * 8);
+      line-height: calc(var(--spacing) * 8);
+    }
+  }
+  .lg\:leading-9 {
+    @media (width >= 64rem) {
+      --tw-leading: calc(var(--spacing) * 9);
+      line-height: calc(var(--spacing) * 9);
+    }
+  }
+  .lg\:leading-12 {
+    @media (width >= 64rem) {
+      --tw-leading: calc(var(--spacing) * 12);
+      line-height: calc(var(--spacing) * 12);
+    }
+  }
+  .lg\:leading-16 {
+    @media (width >= 64rem) {
+      --tw-leading: calc(var(--spacing) * 16);
+      line-height: calc(var(--spacing) * 16);
     }
   }
   .lg\:leading-22 {
     @media (width >= 64rem) {
       --tw-leading: calc(var(--spacing) * 22);
       line-height: calc(var(--spacing) * 22);
+    }
+  }
+  .lg\:text-\[22p3\] {
+    @media (width >= 64rem) {
+      color: 22p3;
     }
   }
 }
@@ -366,12 +740,23 @@
   syntax: "*";
   inherits: false;
 }
+@property --tw-tracking {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-outline-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
+}
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
       --tw-border-style: solid;
       --tw-leading: initial;
       --tw-font-weight: initial;
+      --tw-tracking: initial;
+      --tw-outline-style: solid;
     }
   }
 }
