--- a/src/output.css
+++ b/src/output.css
@@ -9,8 +9,9 @@
       "Courier New", monospace;
     --color-red-500: oklch(63.7% 0.237 25.331);
     --color-orange-400: oklch(75% 0.183 55.934);
-    --color-amber-300: oklch(87.9% 0.169 91.605);
     --color-yellow-400: oklch(85.2% 0.199 91.936);
+    --color-blue-500: oklch(62.3% 0.214 259.815);
+    --color-pink-500: oklch(65.6% 0.241 354.308);
     --color-gray-300: oklch(87.2% 0.01 258.338);
     --color-gray-600: oklch(44.6% 0.03 256.802);
     --color-black: #000;
@@ -26,19 +27,17 @@
     --text-2xl--line-height: calc(2 / 1.5);
     --text-3xl: 1.875rem;
     --text-3xl--line-height: calc(2.25 / 1.875);
-    --text-5xl: 3rem;
-    --text-5xl--line-height: 1;
     --text-6xl: 3.75rem;
     --text-6xl--line-height: 1;
-    --text-7xl: 4.5rem;
-    --text-7xl--line-height: 1;
     --font-weight-medium: 500;
+    --font-weight-semibold: 600;
     --font-weight-bold: 700;
     --tracking-wide: 0.025em;
     --tracking-wider: 0.05em;
     --tracking-widest: 0.1em;
     --radius-lg: 0.5rem;
     --radius-xl: 0.75rem;
+    --radius-2xl: 1rem;
     --radius-3xl: 1.5rem;
     --ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
     --default-transition-duration: 150ms;
@@ -208,14 +207,26 @@
   .z-10 {
     z-index: 10;
   }
-  .m-5 {
-    margin: calc(var(--spacing) * 5);
+  .container {
+    width: 100%;
+    @media (width >= 40rem) {
+      max-width: 40rem;
+    }
+    @media (width >= 48rem) {
+      max-width: 48rem;
+    }
+    @media (width >= 64rem) {
+      max-width: 64rem;
+    }
+    @media (width >= 80rem) {
+      max-width: 80rem;
+    }
+    @media (width >= 96rem) {
+      max-width: 96rem;
+    }
   }
-  .mx-5 {
-    margin-inline: calc(var(--spacing) * 5);
-  }
-  .mx-auto {
-    margin-inline: auto;
+  .mt-8 {
+    margin-top: calc(var(--spacing) * 8);
   }
   .mt-12 {
     margin-top: calc(var(--spacing) * 12);
@@ -253,125 +264,26 @@
   .h-12 {
     height: calc(var(--spacing) * 12);
   }
-  .h-30 {
-    height: calc(var(--spacing) * 30);
-  }
   .h-38 {
     height: calc(var(--spacing) * 38);
-  }
-  .h-50 {
-    height: calc(var(--spacing) * 50);
-  }
-  .h-64 {
-    height: calc(var(--spacing) * 64);
-  }
-  .h-100 {
-    height: calc(var(--spacing) * 100);
-  }
-  .h-\[90px\] {
-    height: 90px;
-  }
-  .h-\[200px\] {
-    height: 200px;
-  }
-  .h-full {
-    height: 100%;
-  }
-  .max-h-50 {
-    max-height: calc(var(--spacing) * 50);
-  }
-  .max-h-70 {
-    max-height: calc(var(--spacing) * 70);
-  }
-  .max-h-80 {
-    max-height: calc(var(--spacing) * 80);
   }
   .max-h-90 {
     max-height: calc(var(--spacing) * 90);
   }
-  .max-h-100 {
-    max-height: calc(var(--spacing) * 100);
-  }
-  .max-h-200 {
-    max-height: calc(var(--spacing) * 200);
-  }
-  .max-h-900 {
-    max-height: calc(var(--spacing) * 900);
-  }
   .min-h-22 {
     min-height: calc(var(--spacing) * 22);
-  }
-  .min-h-50 {
-    min-height: calc(var(--spacing) * 50);
-  }
-  .min-h-70 {
-    min-height: calc(var(--spacing) * 70);
-  }
-  .min-h-100 {
-    min-height: calc(var(--spacing) * 100);
-  }
-  .min-h-200 {
-    min-height: calc(var(--spacing) * 200);
-  }
-  .min-h-500 {
-    min-height: calc(var(--spacing) * 500);
-  }
-  .min-h-700 {
-    min-height: calc(var(--spacing) * 700);
   }
   .w-15 {
     width: calc(var(--spacing) * 15);
   }
-  .w-30 {
-    width: calc(var(--spacing) * 30);
-  }
   .w-34 {
     width: calc(var(--spacing) * 34);
-  }
-  .w-40 {
-    width: calc(var(--spacing) * 40);
   }
   .w-46 {
     width: calc(var(--spacing) * 46);
   }
-  .w-64 {
-    width: calc(var(--spacing) * 64);
-  }
-  .w-100 {
-    width: calc(var(--spacing) * 100);
-  }
-  .w-120 {
-    width: calc(var(--spacing) * 120);
-  }
-  .w-150 {
-    width: calc(var(--spacing) * 150);
-  }
-  .w-200 {
-    width: calc(var(--spacing) * 200);
-  }
-  .w-300 {
-    width: calc(var(--spacing) * 300);
-  }
-  .w-500 {
-    width: calc(var(--spacing) * 500);
-  }
-  .w-\[300px\] {
-    width: 300px;
-  }
-  .w-\[400px\] {
-    width: 400px;
-  }
-  .w-\[500px\] {
-    width: 500px;
-  }
-  .w-\[600px\] {
-    width: 600px;
-  }
   .w-full {
     width: 100%;
-  }
-  .max-w-50 {
-    max-width: calc(var(--spacing) * 50);
   }
   .max-w-100 {
     max-width: calc(var(--spacing) * 100);
@@ -379,8 +291,8 @@
   .max-w-110 {
     max-width: calc(var(--spacing) * 110);
   }
-  .max-w-124 {
-    max-width: calc(var(--spacing) * 124);
+  .max-w-140 {
+    max-width: calc(var(--spacing) * 140);
   }
   .max-w-150 {
     max-width: calc(var(--spacing) * 150);
@@ -388,35 +300,8 @@
   .max-w-200 {
     max-width: calc(var(--spacing) * 200);
   }
-  .max-w-300 {
-    max-width: calc(var(--spacing) * 300);
-  }
-  .max-w-\[300px\] {
-    max-width: 300px;
-  }
-  .min-w-100 {
-    min-width: calc(var(--spacing) * 100);
-  }
   .min-w-110 {
     min-width: calc(var(--spacing) * 110);
-  }
-  .min-w-150 {
-    min-width: calc(var(--spacing) * 150);
-  }
-  .min-w-200 {
-    min-width: calc(var(--spacing) * 200);
-  }
-  .min-w-full {
-    min-width: 100%;
-  }
-  .flex-shrink {
-    flex-shrink: 1;
-  }
-  .flex-shrink-0 {
-    flex-shrink: 0;
-  }
-  .shrink-0 {
-    flex-shrink: 0;
   }
   .flex-grow {
     flex-grow: 1;
@@ -426,6 +311,14 @@
   }
   .border-collapse {
     border-collapse: collapse;
+  }
+  .translate-y-5 {
+    --tw-translate-y: calc(var(--spacing) * 5);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .translate-y-6 {
+    --tw-translate-y: calc(var(--spacing) * 6);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .resize {
     resize: both;
@@ -448,20 +341,32 @@
   .gap-y-3 {
     row-gap: calc(var(--spacing) * 3);
   }
+  .gap-y-5 {
+    row-gap: calc(var(--spacing) * 5);
+  }
+  .gap-y-6 {
+    row-gap: calc(var(--spacing) * 6);
+  }
   .gap-y-10 {
     row-gap: calc(var(--spacing) * 10);
+  }
+  .gap-y-12 {
+    row-gap: calc(var(--spacing) * 12);
   }
   .gap-y-14 {
     row-gap: calc(var(--spacing) * 14);
   }
-  .overflow-hidden {
-    overflow: hidden;
+  .gap-y-16 {
+    row-gap: calc(var(--spacing) * 16);
+  }
+  .gap-y-20 {
+    row-gap: calc(var(--spacing) * 20);
+  }
+  .rounded-2xl {
+    border-radius: var(--radius-2xl);
   }
   .rounded-3xl {
     border-radius: var(--radius-3xl);
-  }
-  .rounded-lg {
-    border-radius: var(--radius-lg);
   }
   .rounded-xl {
     border-radius: var(--radius-xl);
@@ -476,29 +381,23 @@
   .border-gray-300 {
     border-color: var(--color-gray-300);
   }
+  .border-pink-500 {
+    border-color: var(--color-pink-500);
+  }
+  .border-l-black {
+    border-left-color: var(--color-black);
+  }
   .bg-orange-400 {
     background-color: var(--color-orange-400);
   }
   .bg-white {
     background-color: var(--color-white);
   }
-  .bg-yellow-400 {
-    background-color: var(--color-yellow-400);
-  }
   .object-cover {
     object-fit: cover;
   }
-  .object-none {
-    object-fit: none;
-  }
-  .object-center {
-    object-position: center;
-  }
-  .object-left {
-    object-position: left;
-  }
-  .object-right {
-    object-position: right;
+  .p-3 {
+    padding: calc(var(--spacing) * 3);
   }
   .p-5 {
     padding: calc(var(--spacing) * 5);
@@ -547,9 +446,9 @@
     --tw-font-weight: var(--font-weight-medium);
     font-weight: var(--font-weight-medium);
   }
-  .tracking-wide {
-    --tw-tracking: var(--tracking-wide);
-    letter-spacing: var(--tracking-wide);
+  .font-semibold {
+    --tw-font-weight: var(--font-weight-semibold);
+    font-weight: var(--font-weight-semibold);
   }
   .tracking-wider {
     --tw-tracking: var(--tracking-wider);
@@ -558,6 +457,9 @@
   .tracking-widest {
     --tw-tracking: var(--tracking-widest);
     letter-spacing: var(--tracking-widest);
+  }
+  .text-blue-500 {
+    color: var(--color-blue-500);
   }
   .text-gray-600 {
     color: var(--color-gray-600);
@@ -572,23 +474,17 @@
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
   }
-  .transition-all {
-    transition-property: all;
-    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
-    transition-duration: var(--tw-duration, var(--default-transition-duration));
-  }
-  .duration-500 {
-    --tw-duration: 500ms;
-    transition-duration: 500ms;
-  }
-  .ease-in-out {
-    --tw-ease: var(--ease-in-out);
-    transition-timing-function: var(--ease-in-out);
-  }
   .hover\:cursor-pointer {
     &:hover {
       @media (hover: hover) {
         cursor: pointer;
+      }
+    }
+  }
+  .hover\:underline {
+    &:hover {
+      @media (hover: hover) {
+        text-decoration-line: underline;
       }
     }
   }
@@ -597,29 +493,9 @@
       max-height: calc(var(--spacing) * 100);
     }
   }
-  .sm\:w-56 {
-    @media (width >= 40rem) {
-      width: calc(var(--spacing) * 56);
-    }
-  }
-  .sm\:w-130 {
-    @media (width >= 40rem) {
-      width: calc(var(--spacing) * 130);
-    }
-  }
-  .sm\:w-\[700px\] {
-    @media (width >= 40rem) {
-      width: 700px;
-    }
-  }
   .sm\:max-w-124 {
     @media (width >= 40rem) {
       max-width: calc(var(--spacing) * 124);
-    }
-  }
-  .sm\:object-right {
-    @media (width >= 40rem) {
-      object-position: right;
     }
   }
   .sm\:text-xl {
@@ -628,59 +504,14 @@
       line-height: var(--tw-leading, var(--text-xl--line-height));
     }
   }
-  .sm\:text-red-500 {
-    @media (width >= 40rem) {
-      color: var(--color-red-500);
-    }
-  }
-  .md\:h-96 {
-    @media (width >= 48rem) {
-      height: calc(var(--spacing) * 96);
-    }
-  }
   .md\:max-h-130 {
     @media (width >= 48rem) {
       max-height: calc(var(--spacing) * 130);
     }
   }
-  .md\:w-72 {
+  .md\:max-w-160 {
     @media (width >= 48rem) {
-      width: calc(var(--spacing) * 72);
-    }
-  }
-  .md\:w-160 {
-    @media (width >= 48rem) {
-      width: calc(var(--spacing) * 160);
-    }
-  }
-  .md\:w-auto {
-    @media (width >= 48rem) {
-      width: auto;
-    }
-  }
-  .md\:w-full {
-    @media (width >= 48rem) {
-      width: 100%;
-    }
-  }
-  .md\:max-w-124 {
-    @media (width >= 48rem) {
-      max-width: calc(var(--spacing) * 124);
-    }
-  }
-  .md\:max-w-134 {
-    @media (width >= 48rem) {
-      max-width: calc(var(--spacing) * 134);
-    }
-  }
-  .md\:max-w-144 {
-    @media (width >= 48rem) {
-      max-width: calc(var(--spacing) * 144);
-    }
-  }
-  .md\:max-w-150 {
-    @media (width >= 48rem) {
-      max-width: calc(var(--spacing) * 150);
+      max-width: calc(var(--spacing) * 160);
     }
   }
   .md\:max-w-170 {
@@ -688,24 +519,66 @@
       max-width: calc(var(--spacing) * 170);
     }
   }
+  .md\:max-w-177 {
+    @media (width >= 48rem) {
+      max-width: calc(var(--spacing) * 177);
+    }
+  }
+  .md\:max-w-178 {
+    @media (width >= 48rem) {
+      max-width: calc(var(--spacing) * 178);
+    }
+  }
+  .md\:max-w-180 {
+    @media (width >= 48rem) {
+      max-width: calc(var(--spacing) * 180);
+    }
+  }
+  .md\:max-w-200 {
+    @media (width >= 48rem) {
+      max-width: calc(var(--spacing) * 200);
+    }
+  }
+  .md\:max-w-220 {
+    @media (width >= 48rem) {
+      max-width: calc(var(--spacing) * 220);
+    }
+  }
+  .md\:max-w-226 {
+    @media (width >= 48rem) {
+      max-width: calc(var(--spacing) * 226);
+    }
+  }
   .md\:min-w-124 {
     @media (width >= 48rem) {
       min-width: calc(var(--spacing) * 124);
     }
   }
-  .md\:object-center {
+  .md\:min-w-178 {
     @media (width >= 48rem) {
-      object-position: center;
+      min-width: calc(var(--spacing) * 178);
     }
   }
-  .md\:object-left {
+  .md\:translate-y-5 {
     @media (width >= 48rem) {
-      object-position: left;
+      --tw-translate-y: calc(var(--spacing) * 5);
+      translate: var(--tw-translate-x) var(--tw-translate-y);
     }
   }
-  .md\:object-top {
+  .md\:grid-cols-2 {
     @media (width >= 48rem) {
-      object-position: top;
+      grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+  }
+  .md\:gap-x-4 {
+    @media (width >= 48rem) {
+      column-gap: calc(var(--spacing) * 4);
+    }
+  }
+  .md\:text-2xl {
+    @media (width >= 48rem) {
+      font-size: var(--text-2xl);
+      line-height: var(--tw-leading, var(--text-2xl--line-height));
     }
   }
   .md\:text-3xl {
@@ -714,10 +587,10 @@
       line-height: var(--tw-leading, var(--text-3xl--line-height));
     }
   }
-  .md\:leading-8 {
+  .md\:text-xl {
     @media (width >= 48rem) {
-      --tw-leading: calc(var(--spacing) * 8);
-      line-height: calc(var(--spacing) * 8);
+      font-size: var(--text-xl);
+      line-height: var(--tw-leading, var(--text-xl--line-height));
     }
   }
   .md\:leading-10 {
@@ -726,30 +599,9 @@
       line-height: calc(var(--spacing) * 10);
     }
   }
-  .md\:leading-12 {
-    @media (width >= 48rem) {
-      --tw-leading: calc(var(--spacing) * 12);
-      line-height: calc(var(--spacing) * 12);
-    }
-  }
-  .md\:text-red-500 {
-    @media (width >= 48rem) {
-      color: var(--color-red-500);
-    }
-  }
-  .lg\:ml-5 {
-    @media (width >= 64rem) {
-      margin-left: calc(var(--spacing) * 5);
-    }
-  }
   .lg\:ml-6 {
     @media (width >= 64rem) {
       margin-left: calc(var(--spacing) * 6);
-    }
-  }
-  .lg\:ml-10 {
-    @media (width >= 64rem) {
-      margin-left: calc(var(--spacing) * 10);
     }
   }
   .lg\:flex {
@@ -757,94 +609,14 @@
       display: flex;
     }
   }
-  .lg\:h-\[500px\] {
-    @media (width >= 64rem) {
-      height: 500px;
-    }
-  }
-  .lg\:h-auto {
-    @media (width >= 64rem) {
-      height: auto;
-    }
-  }
-  .lg\:max-h-100 {
-    @media (width >= 64rem) {
-      max-height: calc(var(--spacing) * 100);
-    }
-  }
   .lg\:max-h-110 {
     @media (width >= 64rem) {
       max-height: calc(var(--spacing) * 110);
     }
   }
-  .lg\:max-h-120 {
+  .lg\:max-w-220 {
     @media (width >= 64rem) {
-      max-height: calc(var(--spacing) * 120);
-    }
-  }
-  .lg\:w-96 {
-    @media (width >= 64rem) {
-      width: calc(var(--spacing) * 96);
-    }
-  }
-  .lg\:w-100 {
-    @media (width >= 64rem) {
-      width: calc(var(--spacing) * 100);
-    }
-  }
-  .lg\:w-250 {
-    @media (width >= 64rem) {
-      width: calc(var(--spacing) * 250);
-    }
-  }
-  .lg\:w-\[120\%\] {
-    @media (width >= 64rem) {
-      width: 120%;
-    }
-  }
-  .lg\:w-\[200px\] {
-    @media (width >= 64rem) {
-      width: 200px;
-    }
-  }
-  .lg\:w-auto {
-    @media (width >= 64rem) {
-      width: auto;
-    }
-  }
-  .lg\:max-w-100 {
-    @media (width >= 64rem) {
-      max-width: calc(var(--spacing) * 100);
-    }
-  }
-  .lg\:max-w-110 {
-    @media (width >= 64rem) {
-      max-width: calc(var(--spacing) * 110);
-    }
-  }
-  .lg\:max-w-120 {
-    @media (width >= 64rem) {
-      max-width: calc(var(--spacing) * 120);
-    }
-  }
-  .lg\:max-w-130 {
-    @media (width >= 64rem) {
-      max-width: calc(var(--spacing) * 130);
-    }
-  }
-  .lg\:max-w-140 {
-    @media (width >= 64rem) {
-      max-width: calc(var(--spacing) * 140);
-    }
-  }
-  .lg\:max-w-200 {
-    @media (width >= 64rem) {
-      max-width: calc(var(--spacing) * 200);
-    }
-  }
-  .lg\:max-w-230 {
-    @media (width >= 64rem) {
-      max-width: calc(var(--spacing) * 230);
+      max-width: calc(var(--spacing) * 220);
     }
   }
   .lg\:max-w-240 {
@@ -852,29 +624,24 @@
       max-width: calc(var(--spacing) * 240);
     }
   }
+  .lg\:max-w-242 {
+    @media (width >= 64rem) {
+      max-width: calc(var(--spacing) * 242);
+    }
+  }
   .lg\:max-w-250 {
     @media (width >= 64rem) {
       max-width: calc(var(--spacing) * 250);
     }
   }
-  .lg\:max-w-260 {
+  .lg\:max-w-300 {
     @media (width >= 64rem) {
-      max-width: calc(var(--spacing) * 260);
+      max-width: calc(var(--spacing) * 300);
     }
   }
-  .lg\:max-w-270 {
+  .lg\:max-w-304 {
     @media (width >= 64rem) {
-      max-width: calc(var(--spacing) * 270);
-    }
-  }
-  .lg\:max-w-2530 {
-    @media (width >= 64rem) {
-      max-width: calc(var(--spacing) * 2530);
-    }
-  }
-  .lg\:min-w-100 {
-    @media (width >= 64rem) {
-      min-width: calc(var(--spacing) * 100);
+      max-width: calc(var(--spacing) * 304);
     }
   }
   .lg\:min-w-110 {
@@ -882,24 +649,14 @@
       min-width: calc(var(--spacing) * 110);
     }
   }
-  .lg\:min-w-120 {
-    @media (width >= 64rem) {
-      min-width: calc(var(--spacing) * 120);
-    }
-  }
   .lg\:min-w-130 {
     @media (width >= 64rem) {
       min-width: calc(var(--spacing) * 130);
     }
   }
-  .lg\:min-w-140 {
+  .lg\:min-w-242 {
     @media (width >= 64rem) {
-      min-width: calc(var(--spacing) * 140);
-    }
-  }
-  .lg\:min-w-160 {
-    @media (width >= 64rem) {
-      min-width: calc(var(--spacing) * 160);
+      min-width: calc(var(--spacing) * 242);
     }
   }
   .lg\:min-w-250 {
@@ -907,45 +664,24 @@
       min-width: calc(var(--spacing) * 250);
     }
   }
-  .lg\:min-w-260 {
-    @media (width >= 64rem) {
-      min-width: calc(var(--spacing) * 260);
-    }
-  }
   .lg\:grid-cols-2 {
     @media (width >= 64rem) {
       grid-template-columns: repeat(2, minmax(0, 1fr));
     }
   }
-  .lg\:gap-x-10 {
+  .lg\:grid-cols-3 {
     @media (width >= 64rem) {
-      column-gap: calc(var(--spacing) * 10);
+      grid-template-columns: repeat(3, minmax(0, 1fr));
+    }
+  }
+  .lg\:gap-x-8 {
+    @media (width >= 64rem) {
+      column-gap: calc(var(--spacing) * 8);
     }
   }
   .lg\:gap-x-12 {
     @media (width >= 64rem) {
       column-gap: calc(var(--spacing) * 12);
-    }
-  }
-  .lg\:object-top {
-    @media (width >= 64rem) {
-      object-position: top;
-    }
-  }
-  .lg\:pl-5 {
-    @media (width >= 64rem) {
-      padding-left: calc(var(--spacing) * 5);
-    }
-  }
-  .lg\:text-xl {
-    @media (width >= 64rem) {
-      font-size: var(--text-xl);
-      line-height: var(--tw-leading, var(--text-xl--line-height));
-    }
-  }
-  .lg\:text-\[22px\] {
-    @media (width >= 64rem) {
-      font-size: 22px;
     }
   }
   .lg\:text-\[23px\] {
@@ -963,28 +699,10 @@
       font-size: 74px;
     }
   }
-  .lg\:leading-8 {
-    @media (width >= 64rem) {
-      --tw-leading: calc(var(--spacing) * 8);
-      line-height: calc(var(--spacing) * 8);
-    }
-  }
   .lg\:leading-9 {
     @media (width >= 64rem) {
       --tw-leading: calc(var(--spacing) * 9);
       line-height: calc(var(--spacing) * 9);
-    }
-  }
-  .lg\:leading-12 {
-    @media (width >= 64rem) {
-      --tw-leading: calc(var(--spacing) * 12);
-      line-height: calc(var(--spacing) * 12);
-    }
-  }
-  .lg\:leading-16 {
-    @media (width >= 64rem) {
-      --tw-leading: calc(var(--spacing) * 16);
-      line-height: calc(var(--spacing) * 16);
     }
   }
   .lg\:leading-22 {
@@ -993,11 +711,21 @@
       line-height: calc(var(--spacing) * 22);
     }
   }
-  .lg\:text-\[22p3\] {
-    @media (width >= 64rem) {
-      color: 22p3;
-    }
-  }
+}
+@property --tw-translate-x {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0;
+}
+@property --tw-translate-y {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0;
+}
+@property --tw-translate-z {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0;
 }
 @property --tw-border-style {
   syntax: "*";
@@ -1021,24 +749,17 @@
   inherits: false;
   initial-value: solid;
 }
-@property --tw-duration {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-ease {
-  syntax: "*";
-  inherits: false;
-}
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
+      --tw-translate-x: 0;
+      --tw-translate-y: 0;
+      --tw-translate-z: 0;
       --tw-border-style: solid;
       --tw-leading: initial;
       --tw-font-weight: initial;
       --tw-tracking: initial;
       --tw-outline-style: solid;
-      --tw-duration: initial;
-      --tw-ease: initial;
     }
   }
 }
